# Bassss

./: CMakeLists.txt  README.md  build-installer.bat  build-portable.bat
.github/workflows/: main.yml
resources/: app_icon.rc  resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h
src/audio/: AudioCapture.cpp  AudioCapture.h  AudioDiagnostics.h  AudioProcessor.cpp  AudioProcessor.h  RingBuffer.h  WASAPICapture.cpp  WASAPICapture.h
src/dsp/: AcousticEngine.cpp  AcousticEngine.h  BiquadFilter.cpp  BiquadFilter.h  ClampProcessor.cpp  ClampProcessor.h  Compressor.h  DynamicBass.cpp  DynamicBass.h  EchoEngine.cpp  EchoEngine.h  Equalizer.h  FDNReverb.cpp  FDNReverb.h  PitchShifter.cpp  PitchShifter.h  ReverbEngine.cpp  ReverbEngine.h  Rotator.h  SpeakerConfig.cpp  SpeakerConfig.h  StereoWidth.h
src/ui/: AdvancedAudioTab.cpp  AdvancedAudioTab.h  AdvancedTab.cpp  AdvancedTab.h  CustomWidgets.cpp  CustomWidgets.h  FileTab.cpp  FileTab.h  LiveTab.cpp  LiveTab.h  PillTabBar.cpp  PillTabBar.h  SplashScreen.cpp  SplashScreen.h
